Wed Feb 22 23:27:52 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/iconv/test_option.rb: enabled.  [ruby-core:42802][Bug #6061]

Wed Feb 22 22:04:15 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_foreach): argument check before making Enumerator.
	  [ruby-dev:31525]

Wed Feb 22 22:04:15 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_foreach): return enumerator including kerword
	  arguments.  [ruby-dev:45267][Bug #6054]

Wed Feb 22 21:42:16 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: remove workaround replacement from gcc to gcc-4.2.
	  [Backport #6043]

Wed Feb 22 08:11:06 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c : remove gc_clear_mark_on_sweep_slots() and use
	  rest_sweep() instead of it, because some dead objects might be
	  marked in next the mark phase by false pointers.
	  [ruby-core:42672]

Sun Feb 19 12:27:24 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: ignore all warnings from an arbitrary
	  header in /usr/local/include.

Fri Feb 17 12:51:25 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_header): log the content of header.

Fri Feb 17 12:26:15 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/readline/test_readline.rb (test_completion_proc_empty_result):
	  ensure clearance of Readline's line_buffer after the test.

Fri Feb 17 11:46:39 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/readline/test_readline.rb (test_line_buffer__point): use
	  lambda not to exit entire method by "return".  or "next" for
	  proc.  [ruby-dev:45042] [Bug #5802]

Fri Feb 17 10:15:54 2012  Tanaka Akira  <akr@fsij.org>

	* ext/dbm/extconf.rb: check _DB_H_ macro unavailable except
	  Berkeley DB library.

Fri Feb 17 10:14:47 2012  Tanaka Akira  <akr@fsij.org>

	* test/dbm/test_dbm.rb: fix skip condition for libgdbm 1.8.0 or prior.
	  reported by Bohuslav Kabrda.
	  [ruby-core:42685] [ruby-trunk - Bug #6036]
