@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 139
+#define RUBY_PATCHLEVEL 140
 
 #define RUBY_RELEASE_DATE "2012-02-23"
 #define RUBY_RELEASE_YEAR 2012
